--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/songr
+spring.datasource.username=postgres
+spring.datasource.password=7982
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.mvc.hiddenmethod.filter.enabled=true
